force-app/main/default/objects/Case/fields/Create_on_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Create_on_Zendesk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, then this case will be created on zendeskCRM as well</description>
    <inlineHelpText>If this is checked, then this case will be created on zendeskCRM as well</inlineHelpText>
    <label>Create on Zendesk?</label>
    <type>Checkbox</type>
</CustomField>