force-app/main/default/objects/Case/fields/Zendesk_Id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Id__c</fullName>
    <description>Once the case is created in Zendesk, the corresponding Zendesk case ID is stored in SF.</description>
    <externalId>true</externalId>
    <inlineHelpText>Once the case is created in Zendesk, the corresponding Zendesk case ID is stored in SF.</inlineHelpText>
    <label>Zendesk Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>