force-app/main/default/objects/Case/recordTypes/Paytm_Bank.recordType-meta.xml
<RecordType>
    <fullName>Paytm_Bank</fullName>
    <active>true</active>
    <businessProcess>Online</businessProcess>
    <label>Paytm Bank</label>
</RecordType>