force-app/main/default/objects/Case/recordTypes/Paytm_Wallet.recordType-meta.xml
<RecordType>
    <fullName>Paytm_Wallet</fullName>
    <active>true</active>
    <businessProcess>Online</businessProcess>
    <label>Paytm Wallet</label>
</RecordType>